--- a/Quran/app/src/main/res/layout/activity_main.xml
+++ b/Quran/app/src/main/res/layout/activity_main.xml
@@ -6,18 +6,31 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="126dp"
-        tools:layout_editor_absoluteY="100dp" />
-
     <ListView
         android:layout_width="409dp"
         android:layout_height="581dp"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="149dp" />
+        tools:layout_editor_absoluteX="-49dp"
+        tools:layout_editor_absoluteY="270dp">
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Button" />
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Button" />
+    </ListView>
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        tools:layout_editor_absoluteX="128dp"
+        tools:layout_editor_absoluteY="170dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
